Google oauth flow completed, error messaging handled, user system working correctly. Easily extensible for other networks, fully localized.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,4 +2,11 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  hello: "Hello world"
+  app: 'Googlepoint'
+  logout: 'Logout'
+  login_with_google: 'Login with Google Account'
+  flash:
+    auth_success: 'Authentication successful.'
+    auth_failed: 'Authentication failed.'
+    create_user_error: 'Sorry, there was an error creating your user account.'
+    no_auth_data: "Sorry, we didn't recieve any authentication data."
