--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-- googlepoint -
-http://github.com/zquestz/googlepoint
+- authpoint -
+http://github.com/zquestz/authpoint
 
 Simple shell for rails 3 using omniauth.
 
-This app uses bundler, and rvm is recommended. By default it uses the 1.9.2@googlepoint gemset.
+This app uses bundler, and rvm is recommended. By default it uses the 1.9.2@authpoint gemset.
 
 Much more coming soon. This is just the start.
