--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,9 +2,8 @@
 # See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 en:
-  app: 'Authpoint'
+  app: 'authpoint'
   logout: 'Logout'
-  login_with_google: 'Login with Google Account'
   flash:
     auth_success: 'Authentication successful.'
     auth_failed: 'Authentication failed.'
