Forgot a string for localizing

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,7 @@ en:
   app: 'authpoint'
   logout: 'Logout'
   link_network: 'Link or Update Network'
+  delete_confirmation: 'Are you sure?'
   flash:
     auth_success: 'Authentication successful.'
     auth_failed: 'Authentication failed.'
