Fixed end of README

--- a/README
+++ b/README
@@ -15,3 +15,5 @@ Setup is pretty easy.
 * Run the specs and make sure everything passes with 'rake spec' 
 
 These docs are obviously very rough, more info will be coming soon.
+
+-quest
